# lazy-ecs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-entrypoint.sh  dprint.json  mise.toml  pyproject.toml  renovate.json
.amazonq/cli-todo-lists/: 1759509636812.json  1759511290803.json  1759511970223.json
.github/: renovate.json
.github/workflows/: ci.yml  docker.yml  homebrew.yml  release.yml
Formula/: lazy-ecs.rb.template
demo/: README.md  lazy-ecs-demo.cast
scripts/: generate-homebrew-resources.sh  generate_screenshots.py  get-pypi-info.sh  test-formula-generation.sh  test-production-install.sh
src/lazy_ecs/: __init__.py  aws_service.py  interactive.py  ui.py
src/lazy_ecs/core/: __init__.py  app.py  aws_console.py  base.py  context.py  navigation.py  types.py  utils.py
src/lazy_ecs/features/cluster/: cluster.py  ui.py
src/lazy_ecs/features/container/: container.py  models.py  ui.py
src/lazy_ecs/features/container/features/: environment.py  logs.py  ports.py  volumes.py
src/lazy_ecs/features/service/: actions.py  metrics.py  service.py  ui.py
src/lazy_ecs/features/task/: comparison.py  task.py  ui.py
tests/: conftest.py  test_app.py  test_aws_console.py  test_aws_service.py  test_cli.py  test_cluster_ui.py  test_container_service.py  test_container_ui.py  test_core_navigation.py  test_core_utils.py  test_interactive.py  test_service_actions.py  test_service_events.py  test_service_metrics.py  test_service_pagination.py  test_service_service.py  test_service_ui.py  test_task_comparison.py  test_task_comparison_service.py  test_task_comparison_ui.py  test_task_history.py  test_task_history_ui.py  test_task_service.py  test_task_ui.py  test_task_ui_formatters.py  test_ui.py  test_utils.py
